fix todo update in gatewayService
